manifests/trilium/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trilium
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: trilium
    app.kubernetes.io/service: trilium
    app.kubernetes.io/version: 0.92.4
    helm.sh/chart: trilium-1.3.0
  name: trilium
  namespace: trilium
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/name: trilium
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: trilium
    app.kubernetes.io/version: 0.92.4
    helm.sh/chart: trilium-1.3.0
  name: trilium
  namespace: trilium
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: main
      app.kubernetes.io/instance: trilium
      app.kubernetes.io/name: trilium
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: trilium
        app.kubernetes.io/name: trilium
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: TRILIUM_DATA_DIR
          value: /home/node/trilium-data
        - name: key
          value: value
        image: triliumnext/notes:v0.92.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
        name: trilium
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
        startupProbe:
          failureThreshold: 10
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /home/node/trilium-data/config.ini
          name: config
          subPath: config.ini
        - mountPath: /home/node/trilium-data
          name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
      - configMap:
          name: trilium-config
        name: config
      - name: data
        persistentVolumeClaim:
          claimName: trilium-data
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
    kube-vip.io/loadbalancerIPs: 192.168.14.12
  name: trilium
  namespace: trilium
spec:
  ingressClassName: cilium
  rules:
  - host: trilium.nekropolis.irminsul
    http:
      paths:
      - backend:
          service:
            name: trilium
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: trilium.irminsul
    http:
      paths:
      - backend:
          service:
            name: trilium
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - trilium.irminsul
    - trilium.nekropolis.irminsul
    secretName: trilium-certificate
